# pid-parse

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  findings.md  progress.md  task_plan.md
.github/scripts/: check-byte-audit-baselines.sh  check-missing-docs.sh
.github/workflows/: ci.yml
.memory/: 2026-04-16.md  2026-04-18.md
benches/: pid_pipeline.rs
docs/: architecture-guide.md  byte-audit-guide.md  current-architecture-principles.md  format-notes.md  light-parse-design.md  phase10-coverage-series-summary.md  phase8-9h-summary.md  prd-pid-parse-current-state.md  writer-clsid-and-timestamps.md  writer-layer-plan.md  writer-quickstart.md
docs/analysis/: 2026-05-06-psmclustertable-evidence.md  2026-05-09-controlled-pid-diff-protocol.md  2026-05-09-external-sppid-format-evidence.md  2026-05-09-page-transform-evidence.md  2026-05-09-primitive-line-record-evidence.md  2026-05-13-ida-pro-mcp-reconnaissance.md  2026-05-14-psm-0x00fa-graphic-group-layout.md  2026-05-14-radsrvitem-psm-serialize-bytes.md  2026-05-15-garc2d-packed-int-tail.md  2026-05-16-jstyleoverride-v3-fields.md  2026-05-17-phase19-rad-sibling-probe-null-result.md  2026-05-17-phase20-psm-0x0010-rad-class.md  2026-05-18-d06-relationship-gap.md  2026-05-18-d06-sheet6-audit-inventory.md  2026-05-18-phase24-coordinate-page-metadata-candidates.md
docs/baselines/: README.md  dwg-0201gp06-01.byte-audit.json  dwg-0201gp06-01.fixture.txt  dwg-0202gp06-01.byte-audit.json  dwg-0202gp06-01.fixture.txt  sample-cn-1.byte-audit.json  sample-cn-1.fixture.txt
docs/diagrams/: data-flow.mmd  layer-arch.mmd  pid-parse-current-architecture.html  pid-structure.mmd  probe-decode.mmd
docs/plans/: 2026-04-19-apply-plan-cli.md  2026-04-19-layout-symbol-hint-p2-fixes.md  2026-04-21-next-steps-roadmap-v0.7.1-onward.md  2026-04-21-phase-10b-dynamic-coverage.md  2026-04-21-phase-10c-cluster-dynamic-probes.md  2026-04-21-phase-10d-docversion3-operation-helpers.md  2026-04-21-phase-10e-coverage-json.md  2026-04-21-phase-10f-coverage-bytes.md  2026-04-21-phase-10g-lpstr-utf8.md  2026-04-21-phase-10h-session-archive.md  2026-04-21-phase-10i-vtlpstr-codepage.md  2026-04-21-phase-10j-docsummary-section2.md  2026-04-21-phase-11a-probe-psm-cluster-records-plan.md  2026-04-21-phase-11a-psmclustertable-records.md  2026-04-21-phase-11b-psmsegmenttable.md  2026-04-21-phase-11c-sheet-geometry.md  2026-04-21-phase-12a-normalization-layer.md  2026-04-21-phase-12b-byte-audit-framework.md  2026-04-21-phase-2-structural-decoding-plan.md  2026-04-21-phase-3-step-1-provenance-crossref-plan.md  2026-04-21-phase-3-step-2-object-graph-provenance-plan.md  (+75 more)
examples/: byte_audit_demo.rs  mermaid_demo.rs  oracle_exp_schema.rs  parse_walkthrough.rs  probe_garc2d_bytes.rs  probe_garc2d_packed_bytes.rs  probe_igarc2d_shape.rs  probe_igline2d_attribute_tail.rs  probe_igline2d_shape.rs  probe_iglinestring2d_shape.rs  probe_igpoint2d_shape.rs  probe_igsymbol2d_shape.rs  probe_igtextbox_shape.rs  probe_phase24_top_evidence.rs  probe_psm_0x0010_shape.rs  probe_psm_0x0010_sub_kind.rs  probe_psm_0x00fa_shape.rs  probe_psm_garc2d.rs  probe_psm_gline2d.rs  probe_psm_polyline.rs  probe_psm_type_code_histogram.rs  probe_rad_siblings_0x0029_0x0035.rs  probe_relationship_bytes.rs  psm_dump.rs  publish_walkthrough.rs  roundtrip_walkthrough.rs
src/: api.rs  crossref.rs  error.rs  geometry.rs  import_view.rs  layout.rs  lib.rs  model.rs  package.rs  schema.rs  streams.rs
src/cfb/: mod.rs  (+2 more)
test-file/: D06.pid  DWG-0201GP06-01.pid  DWG-0202GP06-01.pid  工艺管道及仪表流程-1.pid
tests/: backup_boot_page.rs  backup_manifest_real_file.rs  backup_msci.rs  backup_mtf.rs  backup_refdata_real_dir.rs  backup_syscatalog.rs  backup_zip_index_real_files.rs  inspect_cli.rs  parse_real_files.rs  parser_panic_safety.rs  publish_a01_raw_residual.rs  publish_attribute_parity.rs  publish_backlog_inventory.rs  publish_dwg_generated_parity.rs  publish_dwg_mirror.rs  publish_interface_parity.rs  publish_mdf_load.rs  publish_meta_parity.rs  publish_rel_parity.rs  publish_sqlite_load.rs  publish_writer_coverage.rs  publish_xml_cli.rs  unit_parsers.rs  writer_real_files.rs  writer_roundtrip.rs  writer_validate_cli.rs
(+141 files in other folders)
