[package]
name = "pid-parse"
version = "0.10.0"
edition = "2021"
description = "Layered parser for SmartPlant / Smart P&ID .pid files"
license = "MIT OR Apache-2.0"

[dependencies]
base64 = "0.22"
cfb = "0.14"
quick-xml = { version = "0.38", features = ["serialize"] }
# rusqlite with the `bundled` feature compiles a vendored sqlite3.
# Publish XML keeps this as an in-memory relational adapter while
# the primary plant source is now Rust MDF parsing via oxidized-mdf.
rusqlite = { version = "0.31", features = ["bundled"] }
oxidized-mdf = { path = "vendor/oxidized-mdf" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
encoding_rs = "0.8"
schemars = { version = "1.2.1", features = ["preserve_order"] }
uuid = { version = "1", features = ["serde", "v5"] }

[dev-dependencies]
pretty_assertions = "1"
