[package]
name = "pid-parse"
version = "0.11.1"
edition = "2021"
description = "Layered parser for SmartPlant / Smart P&ID .pid files"
license = "MIT OR Apache-2.0"

[dependencies]
base64 = "0.22"
cfb = "0.14"
quick-xml = { version = "0.39", features = ["serialize"] }
# rusqlite with the `bundled` feature compiles a vendored sqlite3.
# Publish XML keeps this as an in-memory relational adapter while
# the primary plant source is now Rust MDF parsing via oxidized-mdf.
rusqlite = { version = "0.39", features = ["bundled"] }
oxidized-mdf = { path = "vendor/oxidized-mdf" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
encoding_rs = "0.8"
log = "0.4"
env_logger = "0.11"
schemars = { version = "1.2.1", features = ["preserve_order"] }
uuid = { version = "1", features = ["serde", "v5"] }
# `zip` is gated to the central-directory reader only — we list
# `RefData~SCHEMA~ID(.zip)?` entry metadata, never decompressing
# payload bytes ourselves. We still need `deflate` enabled because
# `ZipArchive::by_index` constructs a decoder for each entry up
# front (the `zip` crate only validates compression-method support
# when the entry is opened, not when bytes are read), and every
# `SmartPlant`-produced archive observed in the wild uses the
# stored / deflate methods. The other heavy default features
# (aes-crypto / bzip2 / xz / lzma / zstd) stay off to keep the
# CVE surface and build time small.
zip = { version = "8", default-features = false, features = ["deflate"] }

[dev-dependencies]
pretty_assertions = "1"
# Benchmarks live in `benches/` and gate themselves on the local
# `test-file/` fixture; see `benches/pid_pipeline.rs`. Keep criterion
# `default-features = false` so benches compile on a plain stable
# toolchain (no plotters, no rayon surprise) and stay fast to build.
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "pid_pipeline"
harness = false
